--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -39,8 +39,8 @@
                 <input type="text" id="concavity_mean" name="concavity_mean" required>
             </div>
             <div class="form-group">
-                <label for="concave_points_mean">Concave Points Mean:</label>
-                <input type="text" id="concave_points_mean" name="concave_points_mean" required>
+                <label for="concave points_mean">Concave Points Mean:</label>
+                <input type="text" id="concave points_mean" name="concave points_mean" required>
             </div>
             <div class="form-group">
                 <label for="symmetry_mean">Symmetry Mean:</label>
@@ -79,8 +79,8 @@
                 <input type="text" id="concavity_se" name="concavity_se" required>
             </div>
             <div class="form-group">
-                <label for="concave_points_se">Concave Points SE:</label>
-                <input type="text" id="concave_points_se" name="concave_points_se" required>
+                <label for="concave points_se">Concave Points SE:</label>
+                <input type="text" id="concave points_se" name="concave points_se" required>
             </div>
             <div class="form-group">
                 <label for="symmetry_se">Symmetry SE:</label>
@@ -119,8 +119,8 @@
                 <input type="text" id="concavity_worst" name="concavity_worst" required>
             </div>
             <div class="form-group">
-                <label for="concave_points_worst">Concave Points Worst:</label>
-                <input type="text" id="concave_points_worst" name="concave_points_worst" required>
+                <label for="concave points_worst">Concave Points Worst:</label>
+                <input type="text" id="concave points_worst" name="concave points_worst" required>
             </div>
             <div class="form-group">
                 <label for="symmetry_worst">Symmetry Worst:</label>
